...
    return Scaffold(
      body: Form(
          key: _newInstitutionFormKey,
          child: Column(
              mainAxisAlignment: MainAxisAlignment.start,
              children: <Widget>[
                formEntry("name", const Icon(Icons.home),
                    _newInstitutionNameController, this._nameFieldValid),
                formEntry("address", const Icon(Icons.location_on_outlined),
                    _newInstitutionAddressController, this._addressFieldValid),
                // use an accessibility icon for the number of subjects field as this particular icon looks like a person
                formEntry(
                    "# of subjects:",
                    const Icon(Icons.accessibility_new_rounded),
                    _newInstitutionSubjectController,
                    this._subjectNumberFieldValid,
                    TextInputType.number,
                    r"\d+"),
                Row(
...
          // clear the text fields before exiting the add Institution popup
          this._newInstitutionNameController.clear();
          this._newInstitutionAddressController.clear();
          this._newInstitutionSubjectController.clear();
          Navigator.of(context, rootNavigator: true).pop();
        },
        child: const Text("Cancel"));
  }

  // has optional parameter keyboardType with default value TextInputType.text, ie
  // formEntries use text keyboards by default, following this optional parameter is a
  // second optional parameter indicating the regular expression to be used to whitelist
  // the characters entered into the field, by default this regular expression is .* allowing
...
